aidir = $(datarootdir)/tawd/AIScript
ai_DATA = 4_druid_melee_30.txt \
		4_druid_range_30.nut \
		4_knight_30.txt \
		4_mage_30.txt \
		4_rogue_30.txt \
		Bastion_NPC_CatapultFiringAnimation.nut \
		Bastion_NPC_GuardBowAnimation.nut \
		Bastion_NPC_GuardMeleeAnimation1.txt \
		Bastion_NPC_GuardMeleeAnimation2.txt \
		Bastion_NPC_GuardMeleeAnimation3.txt \
		Corsica_NPC_AnubianCatapult1.txt \
		Corsica_NPC_AnubianCatapult2.txt \
		custom_dekkerquest_healer.txt \
		custom_dekkerquest_hell12.txt \
		custom_dekkerquest_it.txt \
		custom_dekkerquest_offense.txt \
		custom_heathendel_anexima.txt \
		custom_heathendel_deathdruid40.txt \
		custom_heathendel_deathknight40b.txt \
		custom_heathendel_deathknight40c.txt \
		custom_heathendel_deathknight40.txt \
		custom_heathendel_deathmage40.txt \
		custom_heathendel_druid40.txt \
		custom_heathendel_epicmagefrost40.txt \
		custom_heathendel_frostmage40.txt \
		custom_heathendel_knight40b.txt \
		custom_heathendel_knight40.txt \
		custom_heathendel_knightrogue40p.txt \
		custom_heathendel_kronos.txt \
		custom_heathendel_mage40.txt \
		custom_heathendel_rogue40.nut \
		custom_heathendel_rogueknight40p.txt \
		custom_heathendel_rogueknight40.txt \
		custom_heathendel_tehuti.txt \
		custom_henge_glow.txt \
		custom_wailing.txt \
		death_creature_brave_6.txt \
		druid_bow_brave_1.txt \
		druid_bow_brave_6.txt \
		druid_death_brave_6.nut \
		druid_mystic_brave_6.txt \
		Earthrise_flavor_catapultfiring1.txt \
		example.nut \
		FailsafeAI.txt \
		fire_creature_brave_6.txt \
		flytrap_brave.txt \
		frost_creature_brave_6.txt \
		grindle.nut \
		knight_brave_1.nut  \
		knight_brave_6.nut \
		mage_fire_brave_1.txt \
		mage_fire_brave_6.txt \
		mage_frost_brave_6.txt \
		melee_creature_brave_1.txt \
		melee_creature_brave_6.txt \
		mystic_creature_brave_6.txt \
		Newb_Knight.nut \
		new_example.nut \
		nut_epicmagefrost40.nut \
		nut_shroomie_brave.nut \
		nut_sleep_test.nut \
		rogue_brave_1.txt \
		rogue_brave_6.nut \
		script_list.txt \
		shroomie_brave.txt \
		thunderwalker_brave.txt

EXTRA_DIST = \
	$(ai_DATA)