gamedatadir = $(datarootdir)/tawd/Data
gamedata_DATA = AbilityTableAdmin.txt \
		AbilityTable.txt \
		CraftDef.txt \
		CreatureDef_Custom.txt \
		CreatureDef-Example.txt \
		CreatureDef_ICEEE.txt \
		CreatureDef_Pets.txt \
		CreatureDef_Players88.txt \
		CreatureDef_Restored.txt \
		CreatureDef.txt \
		Daily.txt \
		DropRateProfile.txt \
		EliteAffix.txt \
		EliteType.txt \
		Gamble.txt \
		GroveTemplate.txt \
		GuildDef.txt \
		InteractDef.txt \
		ItemDef_CraftOverride.txt \
		ItemDef_CSOverride.txt \
		ItemDef_CustomSets.txt \
		ItemDef_Custom.txt \
		ItemDef_Gamble.txt \
		ItemDef_GreysunOverride.txt \
		ItemDef_GrunesAndSwineland.txt \
		ItemDef_ICEEE.txt \
		ItemDef_Legacy.txt \
		ItemDef_NewPotions.txt \
		ItemDef_NewQuest.txt \
		ItemDef_OverrideMasterPlans.txt \
		ItemDef_OverridePatch.txt \
		ItemDef_Pets.txt \
		ItemDef_Refashionable.txt \
		ItemDef_SkillOrb.txt \
		ItemDef_Transformations.txt \
		ItemDef.txt \
		_ItemSetScript.txt \
		_ItemSet.txt \
		MapBarrier.txt \
		MapDef.txt \
		MapLocations.txt \
		Pets.txt \
		QuestAnglorum.txt \
		QuestBastionIsland.txt \
		QuestBeta.txt \
		QuestCorsica.txt \
		QuestDownBelow.txt \
		QuestEarthrise.txt \
		QuestEuropeExt.txt \
		QuestEurope.txt \
		QuestEventHarvestFest.txt \
		QuestEventSummer.txt \
		QuestEventWinterDawning.txt \
		QuestGrunesTalSwineland.txt \
		QuestICEEE.txt \
		QuestMushroomIsle.txt \
		QuestNewCorsica.txt \
		QuestNewEarthrise.txt \
		QuestScript.txt \
		ResCost.txt \
		ScaledDifficulties.txt \
		UNUSED_WINTER_DAWNING_QUEST.txt \
		Valid_ATS.txt \
		ZoneDef.txt \
		ZoneMarkers.txt

EXTRA_DIST = \
	$(gamedata_DATA)