spawnpackagesdir = $(datarootdir)/tawd/SpawnPackages
spawnpackages_DATA = 0_TrashTest.txt \
	1076_SouthendPassage.txt \
	112_ShadowVoid.txt \
	23_CoastalCave.txt \
	24_FangariansLair.txt \
	26_TheDownBelow.txt \
	27_ColdStormCavern.txt \
	28_Underhenge.txt \
	29_WilhelmsCrypt.txt \
	30_Monastery.txt \
	31_RanchCellar.txt \
	32_NottinghamCastle.txt \
	33_BrokenTower.txt \
	36_HollowTree.txt \
	37_SpibearLair.txt \
	38_GoliathRuins.txt \
	39_ForestCavern.txt \
	40_ManticoresLair.txt \
	41_RupunzelsTower.txt \
	42_BreweryCellar.txt \
	43_BremenAsylum.txt \
	44_SeaCave.txt \
	45_RottedTree.txt \
	47_VespinLair.txt \
	48_DarkDepths.txt \
	49_DjinnTemple.txt \
	50_IronMaw.txt \
	56_WailingCrypt.txt \
	58_Corsica.txt \
	59_MushroomIsle.txt \
	60_Chunnel.txt \
	61_CazadorTunnel.txt \
	62_PridelordsChamber.txt \
	63_HallOfBones.txt \
	65_RolsburgMine.txt \
	68_GreyCircleHQ.txt \
	70_DireWolfDen.txt \
	71_ZhushisLair.txt \
	72_RottedMaze.txt \
	73_RottedNursery.txt \
	74_Earthend.txt \
	75_FolkirkManor.txt \
	76_SouthendPassage.txt \
	77_Lighthouse.txt \
	78_HauntedGrove.txt \
	79_SummoningChamber.txt \
	81_Anglorum.txt \
	82_CamelotChamber.txt \
	84_VonGruberManor.txt \
	85_KerakurasLair.txt \
	88_Player.txt \
	92_Bastion.txt \
	9_Europe_GenStat.txt \
	9_Europe.txt \
	9_GrunesSwineland.txt \
	SpawnPackageList.txt \
	XXX_ICEEE.txt

EXTRA_DIST = \
	$(spawnpackages_DATA)