tablesdir = $(datarootdir)/tawd/ItemMod/Tables
tables_DATA = armor_amulet_core.csv \
	armor_amulet_value.csv \
	armor_arms_armor.csv \
	armor_arms_core.csv \
	armor_arms_value.csv \
	armor_chest_armor.csv \
	armor_chest_core.csv \
	armor_chest_value.csv \
	armor_feet_armor.csv \
	armor_feet_core.csv \
	armor_feet_value.csv \
	armor_hands_armor.csv \
	armor_hands_core.csv \
	armor_hands_value.csv \
	armor_head_armor.csv \
	armor_head_core.csv \
	armor_head_value.csv \
	armor_legs_armor.csv \
	armor_legs_core.csv \
	armor_legs_value.csv \
	armor_neck_armor.csv \
	armor_neck_core.csv \
	armor_neck_value.csv \
	armor_ring_core.csv \
	armor_ring_value.csv \
	armor_shield_armor.csv \
	armor_shield_core.csv \
	armor_shield_value.csv \
	armor_shoulder_armor.csv \
	armor_shoulder_core.csv \
	armor_shoulder_value.csv \
	armor_waist_armor.csv \
	armor_waist_core.csv \
	armor_waist_value.csv \
	break_chance.csv \
	critical_chance.csv \
	critical_chance_light.csv \
	health_regen.csv \
	ListCore.csv \
	melee_attack_speed.csv \
	melee_attack_speed_light.csv \
	mitigate_dbp.csv \
	mitigate_dbp_low.csv \
	mod_movement.csv \
	specialization.csv \
	weapon_1h_arcane_totem_core.csv \
	weapon_1h_arcane_totem_dmg.csv \
	weapon_1h_arcane_totem_value.csv \
	weapon_1h_one_hand_core.csv \
	weapon_1h_one_hand_dmg.csv \
	weapon_1h_one_hand_value.csv \
	weapon_1h_small_core.csv \
	weapon_1h_small_dmg.csv \
	weapon_1h_small_value.csv \
	weapon_2h_pole_core.csv \
	weapon_2h_pole_dmg.csv \
	weapon_2h_pole_value.csv \
	weapon_2h_two_hand_core.csv \
	weapon_2h_two_hand_dmg.csv \
	weapon_2h_two_hand_value.csv \
	weapon_ranged_bow_core.csv \
	weapon_ranged_bow_dmg.csv \
	weapon_ranged_bow_value.csv \
	weapon_ranged_thrown_core.csv \
	weapon_ranged_thrown_dmg.csv \
	weapon_ranged_thrown_value.csv \
	weapon_ranged_wand_core.csv \
	weapon_ranged_wand_dmg.csv \
	weapon_ranged_wand_value.csv

EXTRA_DIST = \
	$(tables_DATA)
