if WINSERVICE
bin_PROGRAMS = tawd tawdsvc
else
bin_PROGRAMS = tawd
endif

tawd_CPPFLAGS = -I../squirrel/include
tawd_LDADD = ../squirrel/squirrel/libsquirrel.a ../squirrel/sqstdlib/libsqstdlib.a
tawd_LDFLAGS = -v

tawd_SOURCES = md5.cc \
	Ability2.cpp \
	AbilityTime.cpp \
	Account.cpp \
	ActiveCharacter.cpp \
	AIScript.cpp \
	AIScript2.cpp \
	Arena.cpp \
	Audit.cpp \
	AuctionHouse.cpp \
	BroadCast.cpp \
	Books.cpp \
	ByteBuffer.cpp \
	Character.cpp \
	ChatChannel.cpp \
	Chat.cpp \
	Clan.cpp \
	Combat.cpp \
	Components.cpp \
	Config.cpp \
	ConfigString.cpp \
	Crafting.cpp \
	Creature.cpp \
	CreditShop.cpp \
	CreatureSpawner2.cpp \
	Daily.cpp \
	DebugProfiler.cpp \
	DebugTracer.cpp \
	DirectoryAccess.cpp \
	DropTable.cpp \
	EliteMob.cpp \
	EssenceShop.cpp \
	FileReader3.cpp \
	FileReader.cpp \
	FriendStatus.cpp \
	Gamble.cpp \
	Globals.cpp \
	Guilds.cpp \
	GM.cpp \
	IGForum.cpp \
	Instance.cpp \
	InstanceScale.cpp \
	InstanceScript.cpp \
	Interact.cpp \
	Inventory.cpp \
	Item.cpp \
	ItemSet.cpp \
	jsoncpp.cpp \
	Leaderboard.cpp \
	main.cpp \
	Mail.cpp \
	NPC.cpp \
	Packet.cpp \
	PartyManager.cpp \
	PlayerStats.cpp \
	Preferences.cpp \
	PVP.cpp \
	QuestAction.cpp \
	Quest.cpp \
	QuestScript.cpp \
	RemoteAction.cpp \
	Report.cpp \
	Router.cpp \
	Scenery2.cpp \
	ScriptCore.cpp \
	SimulatorBase.cpp \
	Simulator.cpp \
	SocketClass3.cpp \
	Stats.cpp \
	StringList.cpp \
	Timer.cpp \
	Trade.cpp \
	URL.cpp \
	Util.cpp \
	VirtualItem.cpp \
	ZoneDef.cpp \
	ZoneObject.cpp \
	http/HTTP.cpp \
	http/CAR.cpp \
	http/OAuth2.cpp \
	http/TAWApi.cpp \
	http/SiteClient.cpp \
	http/TAWClient.cpp \
	http/LegacyAccounts.cpp \
	http/WebControlPanel.cpp \
	http/CivetServer.cpp \
	http/civetweb.c \
	http/handle_form.inl \
	http/HTTPService.cpp \
	auth/Auth.cpp \
	auth/DevAuthentication.cpp \
	auth/ServiceAuthentication.cpp \
	query/ClanHandlers.cpp \
	query/Query.cpp \
	query/Lobby.cpp \
	query/PreferenceHandlers.cpp \
	query/GMHandlers.cpp \
	query/CreditShopHandlers.cpp \
	query/VaultHandlers.cpp \
	query/AuctionHouseHandlers.cpp \
	query/ScriptHandlers.cpp \
	query/WarpHandlers.cpp \
	query/MarkerHandlers.cpp \
	query/SidekickHandlers.cpp \
	query/QuestHandlers.cpp \
	query/IGFHandlers.cpp \
	query/TradeHandlers.cpp \
	query/SceneryHandlers.cpp \
	query/SupportHandlers.cpp \
	query/BookHandlers.cpp \
	query/ItemHandlers.cpp \
	util/base64.cpp \
	util/JsonHelpers.cpp \
	util/SquirrelObjects.cpp \
	util/Log.cpp \
	Ability2.h \
	AbilityTime.h \
	Account.h \
	ActiveCharacter.h \
	AIScript.h \
	AIScript2.h \
	Arena.h \
	AuctionHouse.h \
	Audit.h \
	Books.h \
	BroadCast.h \
	ByteBuffer.h \
	Character.h \
	ChatChannel.h \
	Chat.h \
	Clan.h \
	Combat.h \
	CreditShop.h \
	CommonTypes.h \
	Components.h \
	Config.h \
	ConfigStr.h \
	ConfigString.h \
	Crafting.h \
	Creature.h \
	CreatureSpawner2.h \
	Daily.h \
	Debug.h \
	DebugProfiler.h \
	DebugTracer.h \
	DecodePackets.h \
	DirectoryAccess.h \
	DropTable.h \
	EliteMob.h \
	EssenceShop.h \
	FileReader3.h \
	FileReader.h \
	Formula.h \
	FriendStatus.h \
	Fun.h \
	Gamble.h \
	Globals.h \
	Guilds.h \
	GM.h \
	IGForum.h \
	Instance.h \
	InstanceScale.h \
	InstanceScript.h \
	IntArray.h \
	Interact.h \
	Inventory.h \
	Item.h \
	ItemSet.h \
	Leaderboard.h \
	Mail.h \
	NPC.h \
	Packet.h \
	PartyManager.h \
	PlayerStats.h \
	Preferences.h \
	PVP.h \
	QuestAction.h \
	Quest.h \
	QuestScript.h \
	RemoteAction.h \
	Report.h \
	RotatingList.h \
	Router.h \
	Scenery2.h \
	ScriptCore.h \
	Session.h \
	SimulatorBase.h \
	Simulator.h \
	SocketClass3.h \
	Stats.h \
	StringList.h \
	Timer.h \
	Trade.h \
	TradingBoard.h \
	URL.h \
	Util.h \
	VirtualItem.h \
	ZoneDef.h \
	ZoneObject.h \
	json/json-forwards.h \
	json/json.h \
	sqmodule.h \
	sqrat.h \
	sqratimport.h \
	sqrat/sqratAllocator.h \
	sqrat/sqratArray.h \
	sqrat/sqratClass.h \
	sqrat/sqratClassType.h \
	sqrat/sqratConst.h \
	sqrat/sqratFunction.h \
	sqrat/sqratGlobalMethods.h \
	sqrat/sqratMemberMethods.h \
	sqrat/sqratObject.h \
	sqrat/sqratOverloadMethods.h \
	sqrat/sqratScript.h \
	sqrat/sqratTable.h \
	sqrat/sqratTypes.h \
	sqrat/sqratUtil.h \
	sqrat/sqratVM.h \
	http/CAR.h \
	http/HTTP.h \
	http/OAuth2.h \
	http/TAWApi.h \
	http/TAWClient.h \
	http/SiteClient.h \
	http/CivetServer.h \
	http/civetweb.h \
	http/HTTPService.h \
	http/md5.inl \
	http/LegacyAccounts.h \
	http/WebControlPanel.h \
	auth/Auth.h \
	auth/DevAuthentication.h \
	auth/ServiceAuthentication.h \
	query/Query.h \
	query/PreferenceHandlers.h \
	query/Lobby.h \
	query/ClanHandlers.h \
	query/GMHandlers.h \
	query/CreditShopHandlers.h \
	query/VaultHandlers.h \
	query/AuctionHouseHandlers.h \
	query/ScriptHandlers.h \
	query/WarpHandlers.h \
	query/MarkerHandlers.h \
	query/SidekickHandlers.h \
	query/QuestHandlers.h \
	query/IGFHandlers.h \
	query/TradeHandlers.h \
	query/SceneryHandlers.h \
	query/SupportHandlers.h \
	query/BookHandlers.h \
	query/ItemHandlers.h \
	util/base64.h \
	util/Log.h \
	util/JsonHelpers.h \
	util/SquirrelObjects.h
	

if WINSERVICE

tawdsvc_CPPFLAGS = -I../squirrel/include -DWINDOWS_SERVICE=1
tawdsvc_LDADD = ../squirrel/squirrel/libsquirrel.a ../squirrel/sqstdlib/libsqstdlib.a
tawdsvc_SOURCES = md5.cc \
	Ability2.cpp \
	AbilityTime.cpp \
	Account.cpp \
	ActiveCharacter.cpp \
	AIScript.cpp \
	AIScript2.cpp \
	Arena.cpp \
	AuctionHouse.cpp \
	Audit.cpp \
	Books.cpp \
	BroadCast.cpp \
	ByteBuffer.cpp \
	Character.cpp \
	ChatChannel.cpp \
	Chat.cpp \
	Clan.cpp \
	Combat.cpp \
	Components.cpp \
	Config.cpp \
	ConfigString.cpp \
	Crafting.cpp \
	Creature.cpp \
	CreditShop.cpp \
	CreatureSpawner2.cpp \
	Daily.cpp \
	DebugProfiler.cpp \
	DebugTracer.cpp \
	DirectoryAccess.cpp \
	DropTable.cpp \
	EliteMob.cpp \
	EssenceShop.cpp \
	FileReader3.cpp \
	FileReader.cpp \
	FriendStatus.cpp \
	Gamble.cpp \
	Globals.cpp \
	Guilds.cpp \
	GM.cpp \
	IGForum.cpp \
	Instance.cpp \
	InstanceScale.cpp \
	InstanceScript.cpp \
	Interact.cpp \
	Inventory.cpp \
	Item.cpp \
	ItemSet.cpp \
	jsoncpp.cpp \
	main.cpp \
	Leaderboard.cpp \
	Mail.cpp \
	NPC.cpp \
	Packet.cpp \
	PartyManager.cpp \
	PlayerStats.cpp \
	Preferences.cpp \
	PVP.cpp \
	QuestAction.cpp \
	Quest.cpp \
	QuestScript.cpp \
	RemoteAction.cpp \
	Report.cpp \
	Router.cpp \
	Scenery2.cpp \
	ScriptCore.cpp \
	SimulatorBase.cpp \
	Simulator.cpp \
	SocketClass3.cpp \
	Stats.cpp \
	StringList.cpp \
	Timer.cpp \
	Trade.cpp \
	URL.cpp \
	Util.cpp \
	VirtualItem.cpp \
	ZoneDef.cpp \
	ZoneObject.cpp \
	http/HTTP.cpp \
	http/CAR.cpp \
	http/OAuth2.cpp \
	http/TAWApi.cpp \
	http/TAWClient.cpp \
	http/SiteClient.cpp \
	http/handle_form.inl \
	http/CivetServer.cpp \
	http/civetweb.c \
	http/HTTPService.cpp \
	http/LegacyAccounts.cpp \
	http/WebControlPanel.cpp \
	auth/Auth.cpp \
	auth/DevAuthentication.cpp \
	auth/ServiceAuthentication.cpp \
	query/Query.cpp \
	query/Lobby.cpp \
	query/ClanHandlers.cpp \
	query/PreferenceHandlers.cpp \
	query/GMHandlers.cpp \
	query/CreditShopHandlers.cpp \
	query/VaultHandlers.cpp \
	query/AuctionHouseHandlers.cpp \
	query/ScriptHandlers.cpp \
	query/WarpHandlers.cpp \
	query/MarkerHandlers.cpp \
	query/SidekickHandlers.cpp \
	query/QuestHandlers.cpp \
	query/IGFHandlers.cpp \
	query/TradeHandlers.cpp \
	query/SceneryHandlers.cpp \
	query/SupportHandlers.cpp \
	query/BookHandlers.cpp \
	query/BookHandlers.cpp \
	query/ItemHandlers.cpp \
	util/base64.cpp \
	util/JsonHelpers.cpp \
	util/SquirrelObjects.cpp \
	util/Log.cpp \
	Books.h \
	Ability2.h \
	AbilityTime.h \
	Account.h \
	ActiveCharacter.h \
	AIScript.h \
	AIScript2.h \
	Arena.h \
	AuctionHouse.h \
	Audit.h \
	BroadCast.h \
	ByteBuffer.h \
	Character.h \
	ChatChannel.h \
	Chat.h \
	Combat.h \
	CreditShop.h \
	Clan.h \
	CommonTypes.h \
	Components.h \
	Config.h \
	ConfigStr.h \
	ConfigString.h \
	Crafting.h \
	Creature.h \
	CreatureSpawner2.h \
	Daily.h \
	Debug.h \
	DebugProfiler.h \
	DebugTracer.h \
	DecodePackets.h \
	DirectoryAccess.h \
	DropTable.h \
	EliteMob.h \
	EssenceShop.h \
	FileReader3.h \
	FileReader.h \
	Formula.h \
	FriendStatus.h \
	Fun.h \
	Gamble.h \
	Globals.h \
	Guilds.h \
	GM.h \
	IGForum.h \
	Instance.h \
	InstanceScale.h \
	InstanceScript.h \
	IntArray.h \
	Interact.h \
	Inventory.h \
	Item.h \
	ItemSet.h \
	Leaderboard.h \
	Mail.h \
	NPC.h \
	Packet.h \
	PartyManager.h \
	PlayerStats.h \
	Preferences.h \
	PVP.h \
	QuestAction.h \
	Quest.h \
	QuestScript.h \
	RemoteAction.h \
	Report.h \
	RotatingList.h \
	Router.h \
	Scenery2.h \
	ScriptCore.h \
	Session.h \
	SimulatorBase.h \
	Simulator.h \
	SocketClass3.h \
	Stats.h \
	StringList.h \
	Timer.h \
	Trade.h \
	TradingBoard.h \
	URL.h \
	Util.h \
	VirtualItem.h \
	ZoneDef.h \
	ZoneObject.h \
	json/json-forwards.h \
	json/json.h \
	sqmodule.h \
	sqrat.h \
	sqratimport.h \
	sqrat/sqratAllocator.h \
	sqrat/sqratArray.h \
	sqrat/sqratClass.h \
	sqrat/sqratClassType.h \
	sqrat/sqratConst.h \
	sqrat/sqratFunction.h \
	sqrat/sqratGlobalMethods.h \
	sqrat/sqratMemberMethods.h \
	sqrat/sqratObject.h \
	sqrat/sqratOverloadMethods.h \
	sqrat/sqratScript.h \
	sqrat/sqratTable.h \
	sqrat/sqratTypes.h \
	sqrat/sqratUtil.h \
	sqrat/sqratVM.h \
	http/CAR.h \
	http/HTTP.h \
	http/OAuth2.h \
	http/TAWApi.h \
	http/TAWClient.h \
	http/SiteClient.h \
	http/CivetServer.h \
	http/civetweb.h \
	http/HTTPService.h \
	http/md5.inl \
	http/LegacyAccounts.h \
	http/WebControlPanel.h \
	auth/Auth.h \
	auth/DevAuthentication.h \
	auth/ServiceAuthentication.h \
	query/PreferenceHandlers.h \
	query/Query.h \
	query/Lobby.h \
	query/ClanHandlers.h \
	query/GMHandlers.h \
	query/CreditShopHandlers.h \
	query/VaultHandlers.h \
	query/AuctionHouseHandlers.h \
	query/BookHandlers.h \
	query/ScriptHandlers.h \
	query/WarpHandlers.h \
	query/MarkerHandlers.h \
	query/SidekickHandlers.h \
	query/QuestHandlers.h \
	query/IGFHandlers.h \
	query/TradeHandlers.h \
	query/SceneryHandlers.h \
	query/ItemHandlers.h \
	util/base64.h \
	util/Log.h \
	util/JsonHelpers.h \
	util/SquirrelObjects.h \
	query/SupportHandlers.cpp
endif
