noinst_LIBRARIES = libtawd.a

libtawd_a_CPPFLAGS = -I../squirrel/include -I../LibCPPRedis/includes -I../LibCPPRedis/tacopie/includes
libtawd_a_LIBADD = ../squirrel/squirrel/libsquirrel.a ../squirrel/sqstdlib/libsqstdlib.a ../LibCPPRedis/libcpp_redis.a ../LibCPPRedis/tacopie/libtacopie.a

libtawd_a_SOURCES = md5.cc \
	Ability2.cpp \
	AbilityTime.cpp \
	Account.cpp \
	Achievements.cpp \
	ActiveCharacter.cpp \
	AIScript.cpp \
	AIScript2.cpp \
	Arena.cpp \
	Audit.cpp \
	AuctionHouse.cpp \
	BroadCast.cpp \
	Books.cpp \
	ByteBuffer.cpp \
	Character.cpp \
	ChatChannel.cpp \
	Chat.cpp \
	Clan.cpp \
	Cluster.cpp \
	Combat.cpp \
	Components.cpp \
	Config.cpp \
	ConfigString.cpp \
	Crafting.cpp \
	Creature.cpp \
	CreditShop.cpp \
	CreatureSpawner2.cpp \
	Daily.cpp \
	DebugProfiler.cpp \
	DebugTracer.cpp \
	DirectoryAccess.cpp \
	DropTable.cpp \
	Entities.cpp \
	EliteMob.cpp \
	EssenceShop.cpp \
	FileReader3.cpp \
	FileReader.cpp \
	FriendStatus.cpp \
	Forms.cpp \
	Fun.cpp \
	Gamble.cpp \
	Globals.cpp \
	Guilds.cpp \
	GM.cpp \
	IGForum.cpp \
	Info.cpp \
	Instance.cpp \
	InstanceScale.cpp \
	InstanceScript.cpp \
	Interact.cpp \
	Inventory.cpp \
	Item.cpp \
	ItemSet.cpp \
	jsoncpp.cpp \
	Leaderboard.cpp \
	Mail.cpp \
	md5.cc \
	NPC.cpp \
	Packet.cpp \
	PartyManager.cpp \
	PlayerStats.cpp \
	Preferences.cpp \
	PVP.cpp \
	QuestAction.cpp \
	Quest.cpp \
	QuestScript.cpp \
	RemoteAction.cpp \
	Report.cpp \
	Router.cpp \
	Scenery2.cpp \
	Scheduler.cpp \
	ScriptCore.cpp \
	SimulatorBase.cpp \
	Simulator.cpp \
	SocketClass3.cpp \
	Stats.cpp \
	StringUtil.cpp \
	Trade.cpp \
	URL.cpp \
	Util.cpp \
	VirtualItem.cpp \
	ZoneDef.cpp \
	ZoneObject.cpp \
	http/HTTP.cpp \
	http/CAR.cpp \
	http/GameInfo.cpp \
	http/OAuth2.cpp \
	http/TAWApi.cpp \
	http/SiteClient.cpp \
	http/TAWClient.cpp \
	http/LegacyAccounts.cpp \
	http/WebControlPanel.cpp \
	http/CivetServer.cpp \
	http/civetweb.c \
	http/handle_form.inl \
	http/HTTPService.cpp \
	auth/Auth.cpp \
	auth/DevAuthentication.cpp \
	auth/ClusterAuthentication.cpp \
	auth/ServiceAuthentication.cpp \
	message/MessageHandler.cpp \
	message/LobbyMessage.cpp \
	message/SharedMessage.cpp \
	message/GameMessage.cpp \
	query/ClanHandlers.cpp \
	query/Query.cpp \
	query/Lobby.cpp \
	query/PreferenceHandlers.cpp \
	query/GMHandlers.cpp \
	query/CreditShopHandlers.cpp \
	query/VaultHandlers.cpp \
	query/FormHandlers.cpp \
	query/AuctionHouseHandlers.cpp \
	query/ScriptHandlers.cpp \
	query/MarkerHandlers.cpp \
	query/SidekickHandlers.cpp \
	query/QuestHandlers.cpp \
	query/IGFHandlers.cpp \
	query/TradeHandlers.cpp \
	query/SceneryHandlers.cpp \
	query/SupportHandlers.cpp \
	query/BookHandlers.cpp \
	query/ItemHandlers.cpp \
	query/CommandHandlers.cpp \
	query/LootHandlers.cpp \
	query/FriendHandlers.cpp \
	query/AbilityHandlers.cpp \
	query/CreatureHandlers.cpp \
	query/PetHandlers.cpp \
	query/SpawnHandlers.cpp \
	query/ZoneHandlers.cpp \
	query/StatusHandlers.cpp \
	query/PlayerHandlers.cpp \
	util/base64.cpp \
	util/easylogging++.cc \
	util/JsonHelpers.cpp \
	util/SquirrelObjects.cpp \
	util/Log.cpp \
	Ability2.h \
	AbilityTime.h \
	Account.h \
	Achievements.h \
	ActiveCharacter.h \
	AIScript.h \
	AIScript2.h \
	Arena.h \
	AuctionHouse.h \
	Audit.h \
	Books.h \
	BroadCast.h \
	ByteBuffer.h \
	Callback.h \
	Character.h \
	ChatChannel.h \
	Chat.h \
	Clan.h \
	Cluster.h \
	Combat.h \
	CreditShop.h \
	CommonTypes.h \
	Components.h \
	Config.h \
	ConfigStr.h \
	ConfigString.h \
	Crafting.h \
	Creature.h \
	CreatureSpawner2.h \
	Daily.h \
	Debug.h \
	DebugProfiler.h \
	DebugTracer.h \
	DecodePackets.h \
	DirectoryAccess.h \
	DropTable.h \
	Entities.h \
	EliteMob.h \
	EssenceShop.h \
	FileReader3.h \
	FileReader.h \
	Formula.h \
	Forms.h \
	FriendStatus.h \
	Fun.h \
	Gamble.h \
	Globals.h \
	Guilds.h \
	GM.h \
	Info.h \
	IGForum.h \
	Instance.h \
	InstanceScale.h \
	InstanceScript.h \
	IntArray.h \
	Interact.h \
	Inventory.h \
	Item.h \
	ItemSet.h \
	Leaderboard.h \
	Mail.h \
	md5.hh \
	NPC.h \
	Packet.h \
	PartyManager.h \
	PlayerStats.h \
	Preferences.h \
	PVP.h \
	QuestAction.h \
	Quest.h \
	QuestScript.h \
	RemoteAction.h \
	Report.h \
	RotatingList.h \
	Router.h \
	Scenery2.h \
	Scheduler.h \
	ScriptCore.h \
	SimulatorBase.h \
	Simulator.h \
	SocketClass3.h \
	Stats.h \
	StringUtil.h \
	Trade.h \
	TradingBoard.h \
	URL.h \
	Util.h \
	VirtualItem.h \
	ZoneDef.h \
	ZoneObject.h \
	json/json-forwards.h \
	json/json.h \
	sqmodule.h \
	sqrat.h \
	sqratimport.h \
	sqrat/sqratAllocator.h \
	sqrat/sqratArray.h \
	sqrat/sqratClass.h \
	sqrat/sqratClassType.h \
	sqrat/sqratConst.h \
	sqrat/sqratFunction.h \
	sqrat/sqratGlobalMethods.h \
	sqrat/sqratMemberMethods.h \
	sqrat/sqratObject.h \
	sqrat/sqratOverloadMethods.h \
	sqrat/sqratScript.h \
	sqrat/sqratTable.h \
	sqrat/sqratTypes.h \
	sqrat/sqratUtil.h \
	sqrat/sqratVM.h \
	http/CAR.h \
	http/GameInfo.h \
	http/HTTP.h \
	http/OAuth2.h \
	http/TAWApi.h \
	http/HTTPClient.h \
	http/TAWClient.h \
	http/SiteClient.h \
	http/CivetServer.h \
	http/civetweb.h \
	http/HTTPService.h \
	http/md5.inl \
	http/LegacyAccounts.h \
	http/WebControlPanel.h \
	auth/Auth.h \
	auth/DevAuthentication.h \
	auth/ServiceAuthentication.h \
	auth/ClusterAuthentication.h \
	message/MessageHandler.h \
	message/LobbyMessage.h \
	message/SharedMessage.h \
	message/GameMessage.h \
	query/Query.h \
	query/PreferenceHandlers.h \
	query/Lobby.h \
	query/ClanHandlers.h \
	query/GMHandlers.h \
	query/CreditShopHandlers.h \
	query/FormHandlers.h \
	query/VaultHandlers.h \
	query/AuctionHouseHandlers.h \
	query/ScriptHandlers.h \
	query/MarkerHandlers.h \
	query/SidekickHandlers.h \
	query/QuestHandlers.h \
	query/IGFHandlers.h \
	query/TradeHandlers.h \
	query/SceneryHandlers.h \
	query/SupportHandlers.h \
	query/BookHandlers.h \
	query/ItemHandlers.h \
	query/CommandHandlers.h \
	query/LootHandlers.h \
	query/FriendHandlers.h \
	query/AbilityHandlers.h \
	query/CreatureHandlers.h \
	query/PetHandlers.h \
	query/SpawnHandlers.h \
	query/ZoneHandlers.h \
	query/StatusHandlers.h \
	query/PlayerHandlers.h \
	util/base64.h \
	util/easylogging++.h \
	util/Log.h \
	util/JsonHelpers.h \
	util/SquirrelObjects.h
	