noinst_LIBRARIES = libsquirrel.a
libsquirrel_a_CPPFLAGS = -I../include
libsquirrel_a_SOURCES = sqapi.cpp \
				sqbaselib.cpp \
				sqclass.cpp \
				sqcompiler.cpp \
				sqdebug.cpp \
				sqfuncstate.cpp \
				sqlexer.cpp \
				sqmem.cpp \
				sqobject.cpp \
				sqstate.cpp \
				sqtable.cpp \
				sqvm.cpp
