noinst_LIBRARIES = libsquirrel.a
libsquirrel_a_CPPFLAGS = -I../include
libsquirrel_a_SOURCES = sqapi.cpp \
				sqbaselib.cpp \
				sqclass.cpp \
				sqcompiler.cpp \
				sqdebug.cpp \
				sqfuncstate.cpp \
				sqlexer.cpp \
				sqmem.cpp \
				sqobject.cpp \
				sqstate.cpp \
				sqtable.cpp \
				sqvm.cpp

EXTRA_DIST = sqarray.h \
	sqclass.h \
	sqclosure.h \
	sqcompiler.h \
	sqfuncproto.h \
	sqfuncstate.h \
	sqlexer.h \
	sqobject.h \
	sqopcodes.h \
	sqpcheader.h \
	sqstate.h \
	sqstring.h \
	sqtable.h \
	squserdata.h \
	squtils.h \
	sqvm.h
	
				