noinst_LIBRARIES = libtacopie.a
libtacopie_a_CPPFLAGS = -Iincludes
libtacopie_a_SOURCES = sources/utils/error.cpp \
	sources/utils/thread_pool.cpp \
	sources/utils/logger.cpp \
	sources/network/tcp_server.cpp \
	sources/network/tcp_client.cpp \
	sources/network/io_service.cpp \
	sources/network/common/tcp_socket.cpp \
	sources/network/windows/windows_self_pipe.cpp \
	sources/network/windows/windows_tcp_socket.cpp \
	sources/network/unix/unix_tcp_socket.cpp \
	sources/network/unix/unix_self_pipe.cpp
 